// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip > can be rich 1`] = `
<DocumentFragment>
  <div
    class="mdc-tooltip-wrapper--rich"
  >
    <span
      aria-describedby="123456"
      class=""
      data-tooltip-id="123456"
    >
      test
    </span>
    <div
      aria-hidden="false"
      class="mdc-tooltip mdc-tooltip--rich"
      id="123456"
      role="dialog"
    >
      <div
        class="mdc-tooltip__surface mdc-tooltip__surface-animation"
      >
        <div>
          tooltip
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > can be rich and persistent 1`] = `
<DocumentFragment>
  <div
    class="mdc-tooltip-wrapper--rich"
  >
    <span
      aria-describedby="123456"
      class=""
      data-tooltip-id="123456"
    >
      test
    </span>
    <div
      aria-hidden="false"
      class="mdc-tooltip mdc-tooltip--rich"
      data-mdc-tooltip-persistent="true"
      id="123456"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="mdc-tooltip__surface mdc-tooltip__surface-animation"
      >
        <div>
          tooltip
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > can be rich with default rich styling disabled 1`] = `
<DocumentFragment>
  <div
    class="mdc-tooltip-wrapper--rich"
  >
    <span
      aria-describedby="123456"
      class=""
      data-tooltip-id="123456"
    >
      test
    </span>
    <div
      aria-hidden="false"
      class="mdc-tooltip rmwc-tooltip"
      id="123456"
      role="dialog"
    >
      <div
        class="mdc-tooltip__surface mdc-tooltip__surface-animation"
      >
        <div>
          tooltip
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > renders 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="mdc-tooltip mdc-tooltip--showing"
    data-mdc-tooltip-persistent="true"
    id="123456"
    role="tooltip"
    style="top: 4px; left: 0px;"
  >
    <div
      class="mdc-tooltip__surface mdc-tooltip__surface-animation"
      style="transform-origin: center top;"
    >
      tooltip
    </div>
  </div>
  <span
    aria-describedby="123456"
    class=""
    data-tooltip-id="123456"
    element="[object Object]"
  >
    test
  </span>
</DocumentFragment>
`;
